[NCL-7593] cancel callback and Java17 features